task3/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ledger-gateway
  namespace: payments
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: ledger-api-cert # assumed cert-manager generated TLS secret
    hosts:
    - "api.dodopayments.tech"
